Baked the attack & border clash arrows into the board.html, instead of generating them on the fly. In addition to being a bit quicker, it means I can now tweak each attack arrow so that the text lines up nicely and they wrap around the world in a nice manner (Issue #38).

--- a/Peril.Api/Content/peril.css
+++ b/Peril.Api/Content/peril.css
@@ -592,6 +592,10 @@
         }
         
 /* Player Colours */
+    .attack-hidden {
+        display: none;
+    }
+
     .attack-future {
         fill-opacity: 0.2;
     }
